# Dice

./: CMakeLists.txt
include/: Dice.h
src/: Dice.cpp  main.cpp
